--- a/css/main.css
+++ b/css/main.css
@@ -71,17 +71,11 @@ body {
 
 #main1 {
   border-bottom: 1px solid #E5E5E5;
+  margin-bottom: 20px;
 }
 
 #main1 img {
   border-bottom: 3px solid red;
-}
-
-.main2 {
-  width: 36%;
-  padding: 15px;
-  margin: 20px 10px;
-  float: left;
 }
 
 .section a {
@@ -95,7 +89,7 @@ body {
   padding: 20px 0 0 0;
 }
 
-.first a {
+.main-article a {
   color: #181818;
   text-transform: uppercase;
   font-weight: 700;
@@ -113,7 +107,7 @@ body {
   padding: 0 40px;
 }
 
-.second a {
+.second-article a {
   color: #181818;
   font-size: 24px;
   font-weight: 700;
@@ -131,7 +125,94 @@ body {
   padding: 0 20px;
 }
 
-@media only screen and (max-width: 1023px) {
+/* LATEST HEADLINES */
+
+.latest {
+  font-family: serif;
+  color: #FF0500;
+  font-size: 18px;
+  text-transform: uppercase;
+  padding: 25px;
+}
+
+.lat-headlines li {
+  list-style-type: none;
+  padding: 10px 0;
+  border-bottom: 1px solid #E5E5E5;
+}
+
+.lat-headlines li span {
+  font-size: 10px;
+  color: red;
+}
+
+.lat-headlines li a {
+  color: #181818;
+  font-size: 14px;
+  font-weight: bold;
+  line-height: 2;
+  padding: 0 10px;
+}
+
+.more-headlines {
+  background: #E5E5E5;
+  color: #666666;
+  text-align: center;
+  padding: 25px 0;
+  font-size: 14px;
+  font-weight: bold;
+}
+
+/* 4 columns section */
+
+.news3 {
+  border-top: 1px solid #E5E5E5;
+  border-right: 1px solid #E5E5E5; 
+  padding: 10px;
+}
+
+/* in the magazine */
+
+.block-title {
+  font: 18px/22px serif;
+  letter-spacing: 0.25px;
+  color: #FF0500;
+  text-transform: uppercase;
+  text-align: center;
+  margin-bottom: 10px;
+  padding-top: 10px;
+  border-top: 1px solid #E5E5E5;
+  position: relative;
+}
+
+.block-title span.deco {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 3px;
+  background-color: #FF0500;
+  position: absolute;
+  bottom: 3px;
+  left: 0;
+  right: 0;  
+}
+
+.block-title span.text {
+  display: inline-block;
+  background-color: #FFFFFF;
+  padding: 0 20px;
+  position: relative;
+}
+
+.images-row img {
+  padding: 5px;
+  height: 200px;
+}
+
+/* media queries */
+
+@media only screen and (max-width: 1199px) {
+  /* main section */
   .main2 {
     width: 98%;
     padding: 15px;
@@ -146,7 +227,7 @@ body {
     padding: 0 20px;
   }
   
-  .first a {
+  .main-article a {
     font-size: 24px;
   }
 }
